--- a/TI_1_HW4.ipynb
+++ b/TI_1_HW4.ipynb
@@ -1184,7 +1184,6 @@
    ],
    "source": [
     "import panel as pn #This library helps in the development of dashboards\n",
-    "pn.extension()\n",
     "import panel.widgets as pnw\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1250,8 +1249,72 @@
    "metadata": {},
    "source": [
     "## Functions ##\n",
-    "These functions returns the different types of trajectories seen in the semester: **Brownian Motion (BM)**, **Correlated Random Walk (CRW)** and **Lévy Flight (LF)**."
+    "These functions returns the different types of trajectories seen in the semester: **Brownian Motion (BM)**, **Correlated Random Walk (CRW)** and **Lévy Flight (LF)**.\n",
+    "\n",
+    "*Instructions*\n",
+    "1. Functions that return the different types of trajectories.\n",
+    "2. All functions must take as arguments the **number of steps, speed**, and **starting position**.\n",
+    "3. **CRW** and **LF** functions must also take as an argument the **Cauchy Coefficient**."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81095bfa-acad-46a8-8439-4bdfa1b44619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add the trajectory function for the Brownian Motion (BM)\n",
+    "def bm(steps, speed, start_pos):\n",
+    "    pos = [np.array(start_pos)]\n",
+    "    for _ in range(steps):\n",
+    "        direction = np.random.normal(0, 1, 3)\n",
+    "        direction /= np.linalg.norm(direction)\n",
+    "        pos.append(pos[-1] + speed * direction)\n",
+    "    return np.array(pos)\n",
+    "\n",
+    "#Add the trajectory function for the Correlated Random Walk (CRW)\n",
+    "def crw(steps, speed, start_pos, cauchy_coeff):\n",
+    "    pos = [np.array(start_pos)]\n",
+    "    direction = np.random.normal(0, 1, 3)\n",
+    "    direction /= np.linalg.norm(direction)\n",
+    "    for _ in range(steps):\n",
+    "        new_direction = direction + cauchy_coeff * np.random.normal(0, 1, 3)\n",
+    "        new_direction /= np.linalg.norm(new_direction)\n",
+    "        pos.append(pos[-1] + speed * new_direction)\n",
+    "        direction = new_direction\n",
+    "    return np.array(pos)\n",
+    "\n",
+    "#Add the trajectory function for the Lévy Flight\n",
+    "def levy_f(steps, speed, start_pos, cauchy_coeff, alpha):\n",
+    "    pos = [np.array(start_pos)]\n",
+    "    direction = np.random.normal(0, 1, 3)\n",
+    "    direction /= np.linalg.norm(direction)\n",
+    "    for _ in range(steps):\n",
+    "        step_length = (np.random.pareto(alpha) + 1) * speed\n",
+    "        new_direction = direction + cauchy_coeff * np.random.normal(0, 1, 3)\n",
+    "        new_direction /= np.linalg.norm(new_direction)\n",
+    "        pos.append(pos[-1] + step_length * new_direction)\n",
+    "        direction = new_direction\n",
+    "    return np.array(pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1537c2b8-0532-4145-b711-000a0dc659f8",
+   "metadata": {},
+   "source": [
+    "## Metrics ##\n",
+    "For compute the metrics, we are including the **Path Lenght (PL)**, **Meand Squared Displacement (MSD)** and **Turning Angle Distribution (TAD)**. Each metric will be displayed in the dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37af57a6-0d6b-46ae-8fac-9479c800d394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
