metrics pl & msd & tad

--- a/TI_1_HW4.ipynb
+++ b/TI_1_HW4.ipynb
@@ -1314,7 +1314,61 @@
    "id": "37af57a6-0d6b-46ae-8fac-9479c800d394",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Define the Path Lenght (PL) function for the metrics\n",
+    "def pl(trajectory):\n",
+    "    return np.sum(np.linalg.norm(np.diff(trajectory, axis=0), axis=1))\n",
+    "\n",
+    "#Define the Mean Squared Displacement (MSD) for the metrics\n",
+    "def msd(trajectory):\n",
+    "    n = len(trajectory)\n",
+    "    msd = []\n",
+    "    for lag in range(1, n):\n",
+    "        diffs = trajectory[lag:] - trajectory[:-lag]\n",
+    "        msd.append(np.mean(np.sum(diffs**2, axis=1)))\n",
+    "    return msd\n",
+    "\n",
+    "#Define the Turning Angle Distribution (TAD) function for the metrics\n",
+    "def tad(trajectory):\n",
+    "    diffs = np.diff(trajectory, axis=0)\n",
+    "    diffs = diffs / np.linalg.norm(diffs, axis=1)[:, None]\n",
+    "    angles = []\n",
+    "    for i in range(1, len(diffs)):\n",
+    "        cos_theta = np.clip(np.dot(diffs[i-1], diffs[i]), -1.0, 1.0)\n",
+    "        angles.append(np.degrees(np.arccos(cos_theta)))\n",
+    "    return angles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19b98b41-afa9-4279-8a3d-ddb0801780b6",
+   "metadata": {},
+   "source": [
+    "## Plot trajectories and metrics ##\n",
+    "The plot_trajectory help us to create a 3D plot for the **BM**, **CRW** and **LF** functions. The figure is return in the dashboard. Also, the plot_metric creates a similar plot using the **PL**, **MSD** and **TAD** metrics in the previus steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b77623-1336-4ad6-99bb-6ca8382fbdd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot the functions (BM, CRW & LF)\n",
+    "def plot_trajectory(trajectory, traj_type):\n",
+    "    fig = plt.figure(figsize=(5, 4))\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    ax.plot(trajectory[:, 0], trajectory[:, 1], trajectory[:, 2], color='blue')\n",
+    "    ax.set_title(f\"{traj_type} trajectory in 3D\")\n",
+    "    ax.set_xlabel('x (m)')\n",
+    "    ax.set_ylabel('y (m)')\n",
+    "    ax.set_zlabel('time (s)')\n",
+    "    plt.tight_layout()\n",
+    "    plt.close(fig) #Avoid to plot other figure in the dashboard\n",
+    "    return fig\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
