add the widgets for the dashboard, input boxes and sliders

--- a/TI_1_HW4.ipynb
+++ b/TI_1_HW4.ipynb
@@ -1367,7 +1367,66 @@
     "    plt.tight_layout()\n",
     "    plt.close(fig) #Avoid to plot other figure in the dashboard\n",
     "    return fig\n",
-    "\n"
+    "\n",
+    "#Plot the metrics (PL, MSD & TAD)\n",
+    "def plot_metric(trajectory, metric_type, traj_type):\n",
+    "    fig, ax = plt.subplots(figsize=(5, 4))\n",
+    "\n",
+    "    #Plot the PL metrics in dashboard\n",
+    "    if metric_type == \"PL\":\n",
+    "        pl = pl(trajectory)\n",
+    "        ax.bar([traj_type], [pl], color='green')\n",
+    "        ax.set_title(\"Path Length\")\n",
+    "        ax.set_ylabel(\"Distance\")\n",
+    "\n",
+    "    #Plot the MSD metrics in dashboard\n",
+    "    elif metric_type == \"MSD\":\n",
+    "        msd = msd(trajectory)\n",
+    "        ax.plot(msd, color='red', label=\"MSD\")\n",
+    "        ax.set_title(\"Mean Squared Displacement\")\n",
+    "        ax.set_xlabel(\"Lag\")\n",
+    "        ax.set_ylabel(\"MSD\")\n",
+    "        ax.legend()\n",
+    "\n",
+    "    #Plot the TAD metrics in dashboard\n",
+    "    elif metric_type == \"TAD\":\n",
+    "        tad = tad(trajectory)\n",
+    "        ax.hist(tad, bins=20, color='purple', edgecolor='black')\n",
+    "        ax.set_title(\"Turning Angle Distribution\")\n",
+    "        ax.set_xlabel(\"Angle (degrees)\")\n",
+    "        ax.set_ylabel(\"Frequency\")\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.close(fig) #Avoid to plot other figure in the dashboard\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "744ed535-146d-42b9-b193-e447db0b3d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the panel widgets for the dashboard\n",
+    "#Buttons for select the trajectory (BM, CRW & LF)\n",
+    "traj_buttons = pn.widgets.RadioButtonGroup(\n",
+    "    name='Trajectory', \n",
+    "    options=['BM', 'CRW', 'LF'], \n",
+    "    button_type='primary'\n",
+    ")\n",
+    "#Boxes and sliders bars to modify the values for the plot in dashboard\n",
+    "steps_slider = pn.widgets.IntSlider(name='Number of steps', start=100, end=1000, step=50, value=500)\n",
+    "x_init_input = pn.widgets.IntInput(name='xInitPos', start=-50, end=50, step=1, value=0)\n",
+    "y_init_input = pn.widgets.IntInput(name='yInitPos', start=-50, end=50, step=1, value=0)\n",
+    "speed_slider = pn.widgets.FloatSlider(name='Speed', start=0.1, end=10.0, step=0.1, value=1.0)\n",
+    "\n",
+    "#Dropdown to select the metric type (PL, MSD, TAD)\n",
+    "metric_dropdown = pn.widgets.Select(name='Metrics type', options=['PL', 'MSD', 'TAD'])\n",
+    "\n",
+    "#Boxes to modify the Cauchy Coefficient and the Alpha value (for CRW and LF)\n",
+    "cauchy_c_input = pn.widgets.FloatInput(name='Cauchy Coefficient', step=0.1, value=1.0)\n",
+    "alpha_input = pn.widgets.FloatInput(name='Levy Alpha', step=0.1, value=1.5)"
    ]
   }
  ],
