dataframe for plotting

--- a/TI_1_HW4.ipynb
+++ b/TI_1_HW4.ipynb
@@ -894,6 +894,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea51fe4d-6757-4f5f-b72e-646dc040d06f",
+   "metadata": {},
+   "source": [
+    "## Dataframe ##\n",
+    "This pn.depends helps to run the update function when the values are modify. Returns the output plot in dashboard."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "645b5903-d96f-4c47-a99b-58efa1572129",
@@ -1005,7 +1014,6 @@
     }
    ],
    "source": [
-    "#Helps to run the update function when the values are modify. Returns the output plot in dashboard\n",
     "@pn.depends(traj_buttons, steps_slider, x_init_input, y_init_input, speed_slider, metric_dropdown, cauchy_c_input, alpha_input)\n",
     "def update(traj_type, steps, x_init, y_init, speed, metric, cauchy_c, alpha):\n",
     "    start_pos = [x_init, y_init, 0]\n",
@@ -1063,14 +1071,6 @@
     "\n",
     "dashboard.servable()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48702819-9bde-44fc-979f-9f52f801925d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
